Integration15 : No label on map but code clean version

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,14 @@ sandbox/
 data/selected_airports.json
 results/airport_scanresults.json
 results/scan_report_ignored.csv
+results/airport_scanresults.json
+data/selected_airports.json
+data/selected_airports.json
+results/airport_scanresults.json
+results/scan_report_ignored.csv
+results/selected_aircraft.json
+results/selected_airports.json
+results/airport_scanresults.json
+results/scan_report_ignored.csv
+results/airport_scanresults.json
+results/scan_report_ignored.csv
