Airports manually added with working markers

--- a/data/custom_airport_mapping.json
+++ b/data/custom_airport_mapping.json
@@ -1,6 +1,6 @@
 [
     {
-        "creator": "SLHSIMDESIGNS",
+        "creator": "slhsimdesigns",
         "title": "cayenne",
         "icao": "SOCA"
     },
